# clin-msi

./: .gitignore  MSI_module_training_function_020521.ipynb  README.md  clin-msi_bam_to_prediction.py  clin_msi_environment.yml  final_score  msi_read_count.py  msi_read_count_v2.py  predict.py  pyproject.toml  test_input_file.txt  test_input_file_bat26.txt  test_normalized.csv  test_raw_count.csv  train.py  training_bam_input.txt  training_final_df.csv  utils.py
.github/workflows/: python-publish.yml
cdk/: app.py  cdk.json  makefile  requirements.txt
cdk/clin_msi/: codepipeline.py  stacks.py
clin_msi/: __main__.py  apply_msi_model.py  msi_training.py  predict.py  train.py  utils.py
clin_msi/count_normalization/: normalize_counts.py
clin_msi/msi_model_scripts/: apply_msi_model.py  msi_training.py
msiPlotter/: parseRaw.py  plotShapTrace.py
msiPlotter/deployment_scripts/: example_raw_data.xlsx  intermediate.csv  zscore_normalized.csv
shapPlotter/: Main_apply_MSI_model_to_formatted_matrix.py  f.py  run_MSI_model.sh
shapPlotter/mod_071019_frozen/: xgb_100.pkl  xgb_101.pkl  xgb_103.pkl  xgb_104.pkl  xgb_105.pkl  xgb_106.pkl  xgb_107.pkl  xgb_110.pkl  xgb_112.pkl  xgb_114.pkl  xgb_117.pkl  xgb_118.pkl  xgb_119.pkl  xgb_12.pkl  xgb_121.pkl  xgb_124.pkl  xgb_126.pkl  xgb_132.pkl  xgb_135.pkl  xgb_140.pkl  xgb_141.pkl  xgb_143.pkl  xgb_145.pkl  xgb_15.pkl  xgb_150.pkl  xgb_151.pkl  xgb_153.pkl  (+236 more)
src/: msi_read_count.py  msi_read_count_v2.py  test.csv  test_input_file.txt  test_normalized.csv  test_with_mismatch.csv
test/: xgb_135.pkl
tests/: test_utils.py
(+243 files in other folders)
