[tool.poetry]
name = "clin-msi"
version = "0.0.2"
description = "The workflow package for MSI detection in Python"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
xgboost = "1.3.3"

[tool.poetry.dev-dependencies]
pytest = "3.4"

[build-system]
requires = ["poetry-core==1.0.0"]
build-backend = "poetry.core.masonry.api"
