[tool.poetry]
name = "clin-msi"
version = "0.0.0"
description = "The workflow package for MSI detection in Python"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
xgboost = "1.3.3"

[tool.poetry.dev-dependencies]
pytest = "3.4"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core==1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"