[tool.poetry]
name = "clin-msi"
version = "0.0.0"
description = "The workflow package for MSI detection in Python"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
xgboost = "1.3.3"
pysam = "0.15.2"
regex = "2020.11.13"
pandas = "1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core==1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"